--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,21 @@
 apply plugin:'java'
 apply plugin:'idea'
 apply plugin:'jetty'
+apply plugin:'maven'
+repositories {
+	repositories{
+		maven{
+			url "http://localhost:8081/nexus/content/groups/public/"
+			}
+	}
+}
+dependencies{
+	compile  'org.springframework:spring-core:4.1.6.RELEASE'
+	compile  'org.springframework:spring-beans:4.1.6.RELEASE'
+	compile  'org.springframework:spring-aop:4.1.6.RELEASE'
+	compile  'org.springframework:spring-context:4.1.6.RELEASE'
+	compile  'org.springframework:spring-webmvc:4.1.6.RELEASE'
+}
 
 task wrapper (type: Wrapper) {
 	gradleVersion = '2.0'
