--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ dependencies{
 	compile  'org.springframework:spring-aop:4.1.6.RELEASE'
 	compile  'org.springframework:spring-context:4.1.6.RELEASE'
 	compile  'org.springframework:spring-webmvc:4.1.6.RELEASE'
+	compile  'org.springframework:spring-web:4.1.6.RELEASE'
+	compile  'org.hibernate:hibernate:3.5.4-Final'
+	compile  'org.hibernate:hibernate-annotations:3.5.4-Final'
+	compile  'org.hibernate:hibernate-entitymanager:4.3.9.Final'
 }
 
 task wrapper (type: Wrapper) {
