--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,6 @@ dependencies{
 	compile  'org.springframework:spring-webmvc:4.1.6.RELEASE'
 	compile  'org.springframework:spring-web:4.1.6.RELEASE'
 	compile  'org.hibernate:hibernate:3.5.4-Final'
-	compile  'org.hibernate:hibernate-annotations:3.5.4-Final'
 	compile  'org.hibernate:hibernate-entitymanager:4.3.9.Final'
 	compile  'mysql:mysql-connector-java:5.1.35'
 	compile  'log4j:log4j:1.2.17'
@@ -27,7 +26,9 @@ dependencies{
 	compile 'org.hibernate:hibernate-entitymanager:4.3.9.Final'
 	compile 'org.hibernate.javax.persistence:hibernate-jpa-2.0-api:1.0.1.Final'
 	compile 'javax.persistence:persistence-api:1.0.2'
-
+	compile 'aspectj:aspectjrt:1.5.4'
+	compile 'org.aspectj:aspectjweaver:1.8.5'
+	compile 'org.slf4j:slf4j-api:1.7.12'
 }
 
 task wrapper (type: Wrapper) {
