--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,24 +9,24 @@
     </listener>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath*:spring-*.xml</param-value>
+        <param-value>classpath*:springmvc.xml</param-value>
     </context-param>
 
 
     <servlet>
-        <servlet-name>dispatcherServlet</servlet-name>
+        <servlet-name>springmvc</servlet-name>
         <servlet-class>
             org.springframework.web.servlet.DispatcherServlet
         </servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath*:config/spring-servlet.xml</param-value>
+            <param-value>classpath*:spring-servlet.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>dispatcherServlet</servlet-name>
-        <url-pattern>/</url-pattern>
+        <servlet-name>springmvc</servlet-name>
+        <url-pattern>*.do</url-pattern>
     </servlet-mapping>
 
     <filter>
@@ -41,7 +41,7 @@
             <param-value>true</param-value>
         </init-param>
     </filter>
-
+    <!--
     <filter>
         <filter-name>openSession</filter-name>
         <filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
@@ -51,7 +51,7 @@
         <filter-name>openSession</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
+    -->
 
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
