--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,26 +9,20 @@
     </listener>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-
         <param-value>/WEB-INF/applicationContext.xml</param-value>
     </context-param>
 
 
     <servlet>
-
-        <servlet-name>springmvc</servlet-name>
+        <servlet-name>spring</servlet-name>
         <servlet-class>
             org.springframework.web.servlet.DispatcherServlet
         </servlet-class>
-        <init-param>
-            <param-name>contextConfigLocation</param-name>
-            <param-value>classpath*:spring-servlet.xml</param-value>
-        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>springmvc</servlet-name>
-        <url-pattern>*.do</url-pattern>
+        <servlet-name>spring</servlet-name>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
     <filter>
@@ -43,18 +37,21 @@
             <param-value>true</param-value>
         </init-param>
     </filter>
-    <!--
+<!--
     <filter>
         <filter-name>openSession</filter-name>
         <filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
+        <init-param>
+            <param-name>flushMode</param-name>
+            <param-value>AUTO</param-value>
+        </init-param>
     </filter>
 
     <filter-mapping>
         <filter-name>openSession</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    -->
-
+-->
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
